@@ -1,3 +1,6 @@
+2009-02-04  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/keymaps.jl: remove tab-keymap, add grouping to Button2-Off on titlebar
+
 2009-02-03  Christopher Bratusek <zanghar@freenet.de>
 	* configure.in: - re-add checks for XFree86 (add --without-xorg-x11r7 flag)
                         - fixed a typo
